[package]
name = "high-perf-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
deadpool-sqlite = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization & Speed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.3" # SIMD-accelerated JSON
mimalloc = "0.1" # High-performance memory allocator

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
