[package]
name = "high-perf-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
deadpool-sqlite = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization & Speed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sonic-rs = "0.3" # SIMD-accelerated JSON
mimalloc = "0.1" # High-performance memory allocator

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
sqlparser = { version = "0.43.1", features = ["serde"] }
lazy_static = "1.5.0"
bytes = "1.11.1"
byteorder = "1.5.0"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
bincode = "1.3"
once_cell = "1.21.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bench]]
name = "benchmark"
harness = false
